--- a/_includes/social.html
+++ b/_includes/social.html
@@ -11,7 +11,7 @@
 	  <a href="http://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a>
     {% endif %}
     {% if site.linkedin %}
-	  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
+	  <a href="http://linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
     {% endif %}
     {% if site.stackoverflow %}
 	  <a href="http://stackoverflow.com/{{ site.stackoverflow }}"><i class="fa fa-stack-overflow"></i></a>
