--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -58,9 +58,9 @@
     integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
     crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="./{{ site.baseurl }}static/js/docs.min.js"></script>
-    <script src="./{{ site.baseurl }}static/js/main.js"></script>
+	<script src="./static/js/docs.min.js"></script>
+    <script src="./static/js/main.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./{{ site.baseurl }}static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="./static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
