--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,10 @@
     </div>
     <div id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li>
+        <li><a href="{{ site.baseurl }}blog.html">Angular</a></li>
+        <li><a href="{{ site.baseurl }}blog.html">Javascript</a></li>
+        <li><a href="{{ site.baseurl }}blog.html">CSS</a></li>
+        <li><a href="{{ site.baseurl }}blog.html">About me</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
         <!-- <li><a href="http://biomadeira.github.io/vitae">RESUME</a></li> -->
       </ul>
