--- a/_includes/social.html
+++ b/_includes/social.html
@@ -7,9 +7,9 @@
 	  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>
     {% endif %}
 
-    {% if site.twitter %}
+    <!-- {% if site.twitter %}
 	  <a href="http://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a>
-    {% endif %}
+    {% endif %} -->
     {% if site.linkedin %}
 	  <a href="http://linkedin.com/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
     {% endif %}
