--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <li><a href="{{ site.baseurl }}blog.html">Angular</a></li>
         <li><a href="{{ site.baseurl }}blog.html">Javascript</a></li>
         <li><a href="{{ site.baseurl }}blog.html">CSS</a></li>
-        <li><a href="{{ site.baseurl }}blog.html">About me</a></li>
+        <li><a href="{{ site.baseurl }}about-me.html">About me</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
         <!-- <li><a href="http://biomadeira.github.io/vitae">RESUME</a></li> -->
       </ul>
