--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     </div>
     <div id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}blog.html">Angular</a></li>
+        <li><a href="{{ site.url }}blog.html">Angular</a></li>
         <li><a href="{{ site.baseurl }}blog.html">Javascript</a></li>
         <li><a href="{{ site.baseurl }}blog.html">CSS</a></li>
         <li><a href="{{ site.baseurl }}about-me.html">About me</a></li>
