--- a/Angular/_layouts/layout.html
+++ b/Angular/_layouts/layout.html
@@ -27,11 +27,11 @@
     <![endif]-->
 
 	<!-- Custom styles for this template -->
-    <link rel="stylesheet" type="text/css" href="./static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="./Angular/static/css/main.css" />
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,200bold,400old" />
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" />
   <!-- <link rel="stylesheet" type="text/css" href="./{{ site.baseurl }}static/css/syntax.css" /> -->
-  <link rel="stylesheet" type="text/css" href="./static/css/syntax.css" />
+  <link rel="stylesheet" type="text/css" href="./Angular/static/css/syntax.css" />
 
     <!-- Google Analytics -->
     {% include analytics.html %}
@@ -58,9 +58,9 @@
     integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ=="
     crossorigin="anonymous"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="./static/js/docs.min.js"></script>
-    <script src="./static/js/main.js"></script>
+	<script src="./Angular/static/js/docs.min.js"></script>
+    <script src="./Angular/static/js/main.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="./static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="./Angular/static/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
