--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     <div id="navbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ site.url }}{{site.Angular}}blog.html">Angular</a></li>
-        <li><a href="{{ site.baseurl }}blog.html">Javascript</a></li>
+        <li><a href="{{ site.baseurl }}{{site.Javascript}}blog.html">Javascript</a></li>
         <li><a href="{{ site.baseurl }}blog.html">CSS</a></li>
         <li><a href="{{ site.url }}{{site.About-me}}about-me.html">About me</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
