--- a/JavaScript/static/css/main.css
+++ b/JavaScript/static/css/main.css
@@ -214,3 +214,46 @@ color: black;
   padding-bottom: 15px;
   
 }*/
+.article{
+  display: flex;
+  color: #EFBB35;
+  font-size: 20PX;
+}
+.article::after{
+  content: " ";
+    background: linear-gradient(to right,#EFBB35,#EFBB36);
+    height: 3px;
+    position: relative;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: auto;
+    margin: .75em 2px 0 3px;
+    flex-grow: 1;
+    border-radius: 2px;
+}
+.article::selection{
+  background: #EFBB35;
+  color: #ffffff
+}
+.card{
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  height: 200px;
+  
+  margin-top: 20px;
+  
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+.corners::before{
+  content: '';
+  position: absolute;
+  top: 22px;
+  left: 15px;
+  border-bottom: 24px solid white;
+  border-left: 22px solid yellow;
+  width: 0;
+}
