add new react part

--- a/React/static/css/main.css
+++ b/React/static/css/main.css
@@ -248,6 +248,6 @@ color: white;
   top: 0px;
   left: 0px;
   border-bottom: 24px solid white;
-  border-left: 22px solid blue;
+  border-left: 22px solid #61dafb;
   width: 0;
 }
