--- a/Angular/static/css/main.css
+++ b/Angular/static/css/main.css
@@ -238,7 +238,7 @@ color: white;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   height: 200px;
-  
+  border-bottom-right-radius: 20px;
   margin-top: 20px;
   
 }
@@ -248,8 +248,8 @@ color: white;
 .corners::before{
   content: '';
   position: absolute;
-  top: 22px;
-  left: 15px;
+  top: 0px;
+  left: 0px;
   border-bottom: 24px solid white;
   border-left: 22px solid red;
   width: 0;
