--- a/JavaScript/static/css/main.css
+++ b/JavaScript/static/css/main.css
@@ -241,7 +241,7 @@ color: black;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   height: 200px;
-  
+  border-bottom-right-radius: 20px;
   margin-top: 20px;
   
 }
@@ -251,8 +251,8 @@ color: black;
 .corners::before{
   content: '';
   position: absolute;
-  top: 22px;
-  left: 15px;
+  top: 0px;
+  left: 0px;
   border-bottom: 24px solid white;
   border-left: 22px solid yellow;
   width: 0;
