--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,10 +3,27 @@
 html,
 body {
   height: 100%;
-  background-color: #fff;
+  /* background-color: #fff; */
+  /* background-color: #000000; */
+  background: #ece9e6; /* fallback for old browsers */
+  background: linear-gradient(to right, #ece9e6, #ffffff);
   font-family: 'Source Sans Pro', sans-serif;
   /* The html and body elements cannot have any padding or margin. */
   border-top: 3px solid #27A822;
+}
+body.dark {
+  /* background-color: rgb(30,34,39); */
+  background: #0F2027;  /* fallback for old browsers */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); 
+  color: #fff;
+}
+body.dark code[class*=language-],
+body.dark table tbody>tr:nth-child(odd)>td,
+body.dark nav,
+body.dark footer #footer,
+body.dark table tbody>tr:nth-child(odd)>th {
+  /* background: #282c34 */
+  background: linear-gradient(to right, #2C5364, #203A43, #0F2027);
 }
 /* Wrapper for page content to push down footer */
 #wrap {
@@ -179,11 +196,84 @@ div.footer{
   border-bottom: 5px solid #27A822;;
 }
 /* my define */
-
-
+a.angular{
+  border-bottom: 3px solid #DD0031;
+}
+a.react {
+  border-bottom: 3px solid #61dafb;
+}
+a.javascript {
+  border-bottom: 3px solid #F7DF1E;
+}
+a.css {
+  border-bottom: 3px solid #3399FE;
+}
+a.vue {
+  border-bottom: 3px solid #41B883
+}
 /* Set the fixed height of the footer here */
 /*.footer {
   height: 50px;
   padding-bottom: 15px;
   
 }*/
+
+
+/* test */ 
+.theme-switch-wrapper {
+  display: flex;
+  align-items: center;
+  margin: 5px 0px 0px 20px;
+}
+.theme-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.theme-switch input {
+  display:none;
+}
+
+.slider {
+  background-color: #ccc;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: .4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: .4s;
+  width: 26px;
+}
+
+input:checked + .slider {
+  background-color: #66bb6a;
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+
+
+
