--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
         <li><a class="about-me" href="{{ site.url }}{{site.About-me}}about-me.html">About me</a></li>
         <li><a class="project" href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
         <li>
+          <!-- <button onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')">
+            click test
+          </button> -->
           <div class="theme-switch-wrapper">
               <label class="theme-switch" for="checkbox">
            <input type="checkbox" id="checkbox" />
